# ChangeLog for app-text/gocr
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/gocr/ChangeLog,v 1.38 2007/04/23 20:06:52 swegener Exp $

  23 Apr 2007; Sven Wegener <swegener@gentoo.org> gocr-0.43.ebuild:
  Sync IUSE (+tk)

  13 Mar 2007; Alexandre Buisse <nattfodd@gentoo.org> metadata.xml:
  Replaced text-markup by tex as maintaining herd (text-markup split).

*gocr-0.43 (20 Jan 2007)

  20 Jan 2007; Alin Nastac <mrness@gentoo.org>
  +files/gocr-0.43-makefile.patch, -gocr-0.39.ebuild, -gocr-0.40.ebuild,
  +gocr-0.43.ebuild:
  Version bump (#145624). Remove obsolete versions.

  06 Jun 2006; Simon Stelling <blubb@gentoo.org> gocr-0.40-r2.ebuild:
  stable on amd64

  30 May 2006; Jason Wever <weeve@gentoo.org> gocr-0.40-r2.ebuild:
  Stable on SPARC wrt bug #133376.

  26 May 2006; Joseph Jezak <josejx@gentoo.org> gocr-0.40-r2.ebuild:
  Marked ppc stable for bug #133376.

  25 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> gocr-0.40-r2.ebuild:
  Stable on x86 wrt bug #133376.

  23 May 2006; Alexandre Buisse <nattfodd@gentoo.org> -gocr-0.40-r1.ebuild:
  Removed 0.40-r1 as -r2 is stable on ppc64.

  23 May 2006; Markus Rothe <corsair@gentoo.org> gocr-0.40-r2.ebuild:
  Stable on ppc64; bug #133376

*gocr-0.40-r2 (23 May 2006)

  23 May 2006; Alexandre Buisse <nattfodd@gentoo.org> +gocr-0.40-r2.ebuild:
  Added dep to imagemagick when gtk USE flag is set (see bug #133376).

*gocr-0.40-r1 (08 May 2006)

  08 May 2006; Martin Ehmsen <ehmsen@gentoo.org>
  +files/gocr-0.40-as-needed.patch, +gocr-0.40-r1.ebuild:
  Added --as-needed patch from TGL <degrenier@easyconnect.fr>, bug #132567.

  23 Apr 2006; Markus Rothe <corsair@gentoo.org> gocr-0.40.ebuild:
  Stable on ppc64

  17 Dec 2005; Markus Rothe <corsair@gentoo.org> gocr-0.39.ebuild,
  gocr-0.40.ebuild:
  Added ~ppc64; bug #97355

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> gocr-0.39.ebuild:
  Stable on ppc.

*gocr-0.40 (23 Apr 2005)
