@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/ocrad/ocrad-0.15.ebuild,v 1.3 2007/02/26 17:57:18 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/ocrad/ocrad-0.15.ebuild,v 1.4 2007/04/24 14:23:52 gustavoz Exp $
 
 inherit toolchain-funcs eutils
 
@@ -13,7 +13,7 @@ HOMEPAGE="http://www.gnu.org/software/ocrad/ocrad.html"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~amd64 ~ppc ~ppc64 sparc ~x86"
 
 DEPEND="virtual/libc"
 
